fixed overflow in feedUpload

--- a/src/Heritage/Feeds/Feeds.module.css
+++ b/src/Heritage/Feeds/Feeds.module.css
@@ -15,6 +15,7 @@
   background-color: white;
   z-index: 1001;
   margin-bottom: 0 !important;
+  overflow-y: scroll;
 }
 
 .uploadOverlay .header {
